--- a/views/register.ejs
+++ b/views/register.ejs
@@ -50,17 +50,18 @@
                                             </div>
                                         </div>
 
-                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                        <div class="text-center text-lg-start mt-4 pt-2">
                                             <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                            <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a
+                                                    href="/login" class="link-danger">Login</a>
+                                            </p>
                                         </div>
-
                                     </form>
 
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                                        class="img-fluid" alt="Sample image">
+                                    <img src="/assets/image-1.jpeg" class="img-fluid" alt="Sample image">
 
                                 </div>
                             </div>
