--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="vh-100">
+    <!-- <section class="vh-100">
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
@@ -18,27 +18,53 @@
                         class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                    <form action="/login" method="post">
-                        <div class="form-outline mb-4">
-                            <input type="text" id="form3Example3" name="username" class="form-control form-control-lg"
-                                placeholder="Username" />
-                            <label class="form-label" for="form3Example3">Username</label>
-                        </div>
 
-                        <div class="form-outline mb-3">
-                            <input type="password" id="form3Example4" name="password"
-                                class="form-control form-control-lg" placeholder="Enter password" />
-                            <label class="form-label" for="form3Example4">Password</label>
-                        </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <section class="vh-100" style="background-color: #eee;">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black" style="border-radius: 25px;">
+                        <div class="card-body p-md-5">
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                        <div class="text-center text-lg-start mt-4 pt-2">
-                            <button type="submit" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
-                                    class="link-danger">Register</a></p>
-                        </div>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
 
-                    </form>
+                                    <form action="/login" method="post">
+                                        <div class="form-outline mb-4">
+                                            <input type="text" id="form3Example3" name="username"
+                                                class="form-control form-control-lg" placeholder="Username" />
+                                            <label class="form-label" for="form3Example3">Username</label>
+                                        </div>
+
+                                        <div class="form-outline mb-3">
+                                            <input type="password" id="form3Example4" name="password"
+                                                class="form-control form-control-lg" placeholder="Enter password" />
+                                            <label class="form-label" for="form3Example4">Password</label>
+                                        </div>
+
+                                        <div class="text-center text-lg-start mt-4 pt-2">
+                                            <button type="submit" class="btn btn-primary btn-lg"
+                                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                                            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a
+                                                    href="/register" class="link-danger">Register</a></p>
+                                        </div>
+
+                                    </form>
+
+                                </div>
+                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                                    <img src="/assets/image-1.jpeg" class="img-fluid" alt="Sample image">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
