--- a/views/depression.ejs
+++ b/views/depression.ejs
@@ -1,15 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <%- include('includes') %>
+        <title>Depression</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="/CSS/fluid.css">
+        <link rel="stylesheet" href="/CSS/style.css">
+    </head>
+    <body>
 
-<body>
-    Static content on depression
-</body>
+        <div class="banner">
+            <h2>You are not alone. We are with you!!</h2>
+            <h3 style="font-size: 20px;">Feel free to talk to an expert<br>Toll Free No. +919999666555</h3>
+        </div>
 
+        <div class="row">
+            <div class="span_1_of_4 sidebar">
+                
+                <h3 class="ngo-title">NGO</h3>
+                <ul>
+                  <li><a href="https://www.vandrevalafoundation.com/">Vandrevala Foundation</a></li>
+                  <li><a href="https://www.thelivelovelaughfoundation.org/">LiveloveLaugh Foundation</a></li>
+                  <li><a href="https://www.mindroot.org/">Mindroot Foundation</a></li>
+                  <li><a href="https://www.mindsfoundation.org/">The MINDS foundation</a></li>
+                </ul>
+
+                <div class="divider">
+
+                </div>
+                
+                <h3 style="margin-bottom: 10px;">Self Help books</h3>
+                <ul>
+                  <li><a href="https://www.amazon.in/Youre-Not-Alone-Overcome-Depression-ebook/dp/B08KYC41BF/ref=sr_1_14?crid=2ZHIXNA4MZT6F&keywords=self+help+book+for+depression&qid=1645268501&sprefix=self+help+book+for+depressio%2Caps%2C216&sr=8-14">You're Not Alone</a></li>
+                  <li><a href="https://www.amazon.in/Accessing-Healing-Power-Vagus-Nerve/dp/1623170249/ref=sr_1_15?crid=2ZHIXNA4MZT6F&keywords=self+help+book+for+depression&qid=1645268501&sprefix=self+help+book+for+depressio%2Caps%2C216&sr=8-15">Accessing the Healing Power of the Vagus Nerve</a></li>
+                  <li><a href="https://www.amazon.in/Depression-Overcome-Anxiety-Forever-depression-ebook/dp/B071Z5LKDC/ref=sr_1_17?crid=2ZHIXNA4MZT6F&keywords=self+help+book+for+depression&qid=1645268501&sprefix=self+help+book+for+depressio%2Caps%2C216&sr=8-17">Change Your Life Forever: Beat depression without drugs</a></li>
+                  <li><a href="https://www.amazon.in/Overcoming-Depression-3rd-behavioural-techniques/dp/1841191256/ref=sr_1_7?crid=2ZHIXNA4MZT6F&keywords=self+help+book+for+depression&qid=1645268501&sprefix=self+help+book+for+depressio%2Caps%2C216&sr=8-7">Overcoming Depression 3rd Edition</a></li>
+                  <li><a href="https://www.amazon.in/Depression-Powerful-Stress-Anxiety-NATURALLY-ebook/dp/B017FM59I8/ref=sr_1_5?crid=2ZHIXNA4MZT6F&keywords=self+help+book+for+depression&qid=1645268501&sprefix=self+help+book+for+depressio%2Caps%2C216&sr=8-5">101 Powerful Ways To Beat Depression</a></li>
+                </ul>
+                <div class="divider">
+
+                </div>
+                
+                <h3 class="ngo-title">Helpline</h3>
+                <ul>
+                  <li>+91 8764152996 </li>
+                  <li>+91 736380383 </li>
+                  <li>+91 9999666555 </li>
+                </ul>
+            </div>
+            <div class="span_3_of_4">
+                <div class="content">
+                    <h3>Videos</h3>
+                    <p style="margin-bottom: 25px;">Please watch these videos, these will help you</p>
+
+
+                    <div class="row video-row">
+                        <div class="span_1_of_2 video">
+                            <iframe  src="https://www.youtube.com/embed/d1sVO6x9p5U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="span_1_of_2 video">
+                            <iframe src="https://www.youtube.com/embed/-GXfLY4-d8w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="span_1_of_2 video">
+                            <iframe src="https://www.youtube.com/embed/cYjwcUulnCc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="span_1_of_2 video">
+                            <iframe  src="https://www.youtube.com/embed/DQC2eRUilUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="span_1_of_2 video">
+                            <iframe src="https://www.youtube.com/embed/MQB3UUTh8aQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="span_1_of_2 video">
+                            <iframe src="https://www.youtube.com/embed/yXRfaQAVl4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+          
+          
+    </body>
 </html>
